After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759506 - Can not select text on Wayland
Can not select text on Wayland
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-15 16:51 UTC by Marek Kašík
Modified: 2016-03-14 12:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix selection of text on Wayland (1.52 KB, patch)
2015-12-15 16:51 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2015-12-15 16:51:15 UTC
When selecting text on Wayland, the selection clears immediately after the mouse button is released.
This is a similar problem as in https://bugzilla.gnome.org/show_bug.cgi?id=719401 and the same fix works here. See https://git.gnome.org/browse/gtk+/commit/?id=5fe9ebfe11002c870ebf6a12d3936990ed1aedfa and https://git.gnome.org/browse/gtk+/commit/?id=67efefde499d683707050d456846c98527df0ac4.


Additional info:
This was reported to me downstream: https://bugzilla.redhat.com/show_bug.cgi?id=1287402
Comment 1 Marek Kašík 2015-12-15 16:51:44 UTC
Created attachment 317445 [details] [review]
Fix selection of text on Wayland
Comment 2 Carlos Garcia Campos 2016-03-14 09:18:29 UTC
Comment on attachment 317445 [details] [review]
Fix selection of text on Wayland

Ok, thanks
Comment 3 Marek Kašík 2016-03-14 12:00:46 UTC
Comment on attachment 317445 [details] [review]
Fix selection of text on Wayland

Thank you for the review. I've pushed the patch into master.