Fix selection of text on Wayland

Do not clear selection if update of the primary selection failed.
This is expected to happen on Wayland and other platforms with no primary selection,
and just leads to the selected text being cleared after any attempt to change the
text selection itself through either mouse/keyboard.

https://bugzilla.gnome.org/show_bug.cgi?id=759506